# itemadapter

./: .bandit.yml  .bumpversion.cfg  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Changelog.md  MANIFEST.in  Makefile  README.md  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  scrapy_itemadapter.py  setup.py  tox.ini
.github/workflows/: checks.yml  main.yml  publish.yml  tests.yml
itemadapter/: __init__.py  _imports.py  _json_schema.py  adapter.py  exceptions.py  utils.py
tests/: __init__.py  attr_utils.py  dataclasses_utils.py  mock_classes.py  requirements.txt  test_adapter.py  test_adapter_attrs.py  test_adapter_dataclasses.py  test_adapter_pydantic.py  test_adapter_pydantic_v1.py  test_adapter_scrapy.py  test_dataclasses.py  test_interface.py  test_itemadapter.py  test_json_schema.py  test_utils.py
